--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,7 +4,7 @@
 /*this set the margine between the main container and the body */
 #maincontent {
   margin: auto;
-  width: 90%;
+  width: 100%;
 }
 nav {
   height: 55px;
@@ -26,15 +26,21 @@ nav h1 a {
   width:100%;
 }
 /* mobile device view */
-@media device and (max-width: 354px){
+@media screen and (min-device-width: 320px){
   .filter-options select{
-    width: 164px;
+    width: 125px;
   }
+  section#restaurant-container,
+  section#reviews-container {
+    margin: auto;
+    width: 100%;
+  }
+
 }
 /*Trying to get the review header next to image */
-@media screen and (min-width: 507px) and (max-width: 660px){
+@media screen and (min-device-width: 507px) and (max-device-width: 660px){
   #reviews-container {
-   padding: 100px 5px 80px;
+   padding: 0px 0px 0px;
   }
   #reviews-container h2 {
    margin-top: 40px;
@@ -90,7 +96,7 @@ nav h1 a {
  #restaurant-name {
    padding-top: 30px;
    margin: 0px 0 -29px;
-   font-size: 20pt;
+   font-size: 10pt;
   }
   #restaurant-address {
    font-size: 13pt;
@@ -128,7 +134,7 @@ nav h1 a {
   }
   nav {
     /* width: 101%; */
-    text-align: center;
+    text-align: left;
   }
   #breadcrumb {
     padding: 10px 0px 16px;
@@ -148,17 +154,20 @@ nav h1 a {
   #reviews-container h2 {
     margin-top: 59px;
     position: relative;
-}
+  }
 }
 /* *=========== Ends here ===========  */
 
-
 /* This section applies to the body*/
-@media screen and (min-width: 1216px){
-  body.inside {
-   margin: auto;
-
+ @media screen and (min-width: 949px){
+ section#restaurant-container,
+  section#reviews-container {
+    margin: auto;
+    width: 80%;
   }
+}
+
+@media screen and (max-width: 949px){
   .inside header {
    position: relative;
    top: 0;
@@ -168,7 +177,7 @@ nav h1 a {
   }
   nav {
     /* width: 101%; */
-    text-align: center;
+    text-align: left;
   }
   #breadcrumb {
     padding: 10px 0px 16px;
@@ -179,12 +188,9 @@ nav h1 a {
   }
   body.inside{
     margin: auto;
-    width: 80%;
+    width: 100%;
   }
 }
-
-
-
 
 
 
