--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,11 @@ nav h1 a {
   letter-spacing: 10px;
   text-transform: uppercase;
 }
+nav.breadcrumb{
+  margin-left: 0px;
+  padding-left: 0;
+  height: 50px;
+}
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
@@ -243,6 +248,7 @@ nav h1 a {
   border-top: 1px solid #fff;
   /* changed setting to get usablity look for small screen */
   padding: 7px 0px 30px;
+  margin: auto;
   width: 100%;
 }
 #reviews-container {
@@ -250,7 +256,7 @@ nav h1 a {
     width: 100%;
     /*padding: 30px 40px 80px; */
 }
-#reviews-container h2 {
+#reviews-container h3 {
   color: #f58500;
   font-size: 24pt;
   font-weight: 300;
